Annotation jump bug fix. Home refresh fix. UI tweaks.

--- a/analysis-tool-front-end/src/index.css
+++ b/analysis-tool-front-end/src/index.css
@@ -76,7 +76,7 @@
 
 .tooltip {
   position: absolute;
-  top: -20px;
+  top: -30px;
   left: 0px;
   display: none;
   width: 175px;
